@@ -144,7 +144,8 @@ On Win32 makes
 
 sub canonpath {
     my ($self,$path) = @_;
-    
+    return unless defined $path;
+
     $path =~ s/^([a-z]:)/\u$1/s;
     $path =~ s|/|\\|g;
     $path =~ s|([^\\])\\+|$1\\|g;                  # xx\\\\xx  -> xx\xx
