@@ -1,5 +1,8 @@
 Revision history for Perl distribution PathTools.
 
+ - canonpath() with no arguments and canonpath(undef) now consistently
+   return undef on all platforms. [Spotted by Peter John Edwards]
+
  - Fixed splitdir('') and splitdir(undef) and splitdir() to return an
    empty list on VMS and MacOS, like it does on other platforms.
    [Craig A. Berry]
